--- a/lekcji/lesson2+.html
+++ b/lekcji/lesson2+.html
@@ -81,71 +81,71 @@
                             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/834629863&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                     </div>
                     <div class="italic">
-                        <p class="p">To jest drzewo, to jest drzewo.</p>
+                        <p class="p22">To jest drzewo, to jest drzewo.</p>
                     </div>
                     <div class="italic colors">
-                        <p class="p">Ono jest </p><input type="text" data-answer="zielone" class="line_3">
+                        <p class="p22">Ono jest </p> <input type="text" data-answer="zielone" class="line_3">
                     </div>
                     <div class="italic">
-                        <p class="p">To jest niebo, to jest niebo.</p>
+                        <p class="p22">To jest niebo, to jest niebo.</p>
                     </div>
                     <div class="italic colors">
-                        <p class="p">Ono jest </p><input type="text" data-answer="niebieskie" class="line_3">
+                        <p class="p22">Ono jest </p> <input type="text" data-answer="niebieskie" class="line_3">
                     </div>
                     <div>
-                        <p class="p">Piłka, rower, deskorolka</p>
-                        <p class="p">I już ekstra jest!</p>
-                        <p class="p">To jest trawa, to jest trawa.</p>
+                        <p class="p22">Piłka, rower, deskorolka</p>
+                        <p class="p22">I już ekstra jest!</p>
+                        <p class="p22">To jest trawa, to jest trawa.</p>
                     </div>
                     <div class="italic colors">
-                        <p class="p">Ona jest </p><input type="text" data-answer="zielona" class="line_3">
+                        <p class="p22">Ona jest </p> <input type="text" data-answer="zielona" class="line_3">
                     </div>
                     <div>
-                        <p class="p">To jest ławka, to jest ławka</p>
+                        <p class="p22">To jest ławka, to jest ławka</p>
                     </div>
                     <div class="italic colors">
-                        <p class="p">Ona jest </p><input type="text" data-answer="czerwona" class="line_3">
+                        <p class="p22">Ona jest </p> <input type="text" data-answer="czerwona" class="line_3">
                     </div>
                     <div>
-                        <p class="p">Piłka, rower, deskorolka</p>
-                        <p class="p">I już ekstra jest!</p>
-                        <p class="p">Kot jest mały, kot jest mały</p>
+                        <p class="p22">Piłka, rower, deskorolka</p>
+                        <p class="p22">I już ekstra jest!</p>
+                        <p class="p22">Kot jest mały, kot jest mały</p>
                     </div>
                     <div class="italic colors">
-                        <p class="p">On jest</p><input type="text" data-answer="szary" class="line_3">
+                        <p class="p22">On jest</p> <input type="text" data-answer="szary" class="line_3">
                     </div>
                     <div>
-                        <p class="p">Pies jest duży, pies jest duży.</p>
-                        <p class="p">Zaraz wskoczy do kałuży.</p>
+                        <p class="p22">Pies jest duży, pies jest duży.</p>
+                        <p class="p22">Zaraz wskoczy do kałuży.</p>
                     </div>
                     <button onclick="checkAnswers('set2')">Sprawdź</button>
                 </div>
                 <!-- 3 -->
-                <div class=".text20" id="task502E3">
+                <div class=".text20" id="task502E3" style="margin-left: 15%;">
                     <p class="p green"> 3. Prawda (P) czy nieprawda (N)?</p>
                     <div class="task">
-                        <p>1. Słońce jest żółte.</p>
-                        <div class="options">
+                        <p class="wid160">1. Słońce jest żółte.</p>
+                        <div class="options" style="width: 100%;">
                             <label><input type="radio" name="question1" value="1"> P</label>
                             <label><input type="radio" name="question1" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>2. Trawa jest niebieska.</p>
+                        <p class="wid160">2. Trawa jest niebieska.</p>
                         <div class="options">
                             <label><input type="radio" name="question2" value="1"> P</label>
                             <label><input type="radio" name="question2" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>3. Niebo jest zielone.</p>
+                        <p class="wid160">3. Niebo jest zielone.</p>
                         <div class="options">
                             <label><input type="radio" name="question3" value="1"> P</label>
                             <label><input type="radio" name="question3" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>4. Tęcza jest kolorowa.</p>
+                        <p class="wid160">4. Tęcza jest kolorowa.</p>
                         <div class="options">
                             <label><input type="radio" name="question4" value="1"> P</label>
                             <label><input type="radio" name="question4" value="2"> N</label>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="task">
                         <p>
-                        <p>5. Chmura jest czarna.</p>
+                        <p class="wid160">5. Chmura jest czarna.</p>
                         </p>
                         <div class="options">
                             <label><input type="radio" name="question5" value="1"> P</label>
@@ -161,49 +161,49 @@
                         </div>
                     </div>
                     <div class="task">
-                        <p>6. Ławka jest brązowa.</p>
+                        <p class="wid160">6. Ławka jest brązowa.</p>
                         <div class="options">
                             <label><input type="radio" name="question6" value="1"> P</label>
                             <label><input type="radio" name="question6" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>7. Pies jest biały.</p>
+                        <p class="wid160">7. Pies jest biały.</p>
                         <div class="options">
                             <label><input type="radio" name="question7" value="1"> P</label>
                             <label><input type="radio" name="question7" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>8. Kot jest szary.</p>
+                        <p  class="wid160">8. Kot jest szary.</p>
                         <div class="options">
                             <label><input type="radio" name="question8" value="1"> P</label>
                             <label><input type="radio" name="question8" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>9. Latawiec jest zielony.</p>
+                        <p  class="wid160">9. Latawiec jest zielony.</p>
                         <div class="options">
                             <label><input type="radio" name="question9" value="1"> P</label>
                             <label><input type="radio" name="question9" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>10. Piłka jest pomarańczowa.</p>
+                        <p  class="wid160">10. Piłka jest pomarańczowa.</p>
                         <div class="options">
                             <label><input type="radio" name="question10" value="1"> P</label>
                             <label><input type="radio" name="question10" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>11. Ptak jest czarny.</p>
+                        <p  class="wid160">11. Ptak jest czarny.</p>
                         <div class="options">
                             <label><input type="radio" name="question11" value="1"> P</label>
                             <label><input type="radio" name="question11" value="2"> N</label>
                         </div>
                     </div>
                     <div class="task">
-                        <p>12. Deskorolka jest biała.</p>
+                        <p  class="wid160">12. Deskorolka jest biała.</p>
                         <div class="options">
                             <label><input type="radio" name="question12" value="1"> P</label>
                             <label><input type="radio" name="question12" value="2"> N</label>
@@ -221,8 +221,17 @@
                     src="https://wordwall.net/pl/embed/83b1bd5948c74f309844e37e440f73d2?themeId=62&templateId=3&fontStackId=0"
                     frameborder="0" allowfullscreen></iframe>
             </div>
-            <!-- 7-8 -->
-
+            <!--  -->
+            <div class="video">
+                <iframe style="max-width:100%" src="https://wordwall.net/uk/embed/386a3985d220434fb176f4a47f0bc92e?themeId=1&templateId=38&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="video">
+                <iframe style="max-width:100%" src="https://wordwall.net/uk/embed/bf19e932878c4553aacd2d6022bf48e8?themeId=46&templateId=2&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <h2>Piosenka z głoską “s" </h2>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dj6qK-xI6tY?si=o9NObvWPnEKmNjzs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
 
         </main>
     </div>
