--- a/lekcji/lesson2C.html
+++ b/lekcji/lesson2C.html
@@ -123,6 +123,10 @@
                 <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127142&authkey=%21AK7u2-NZ7qMbd2g&width=2040&height=2120"
                     alt="502C11">
             </div>
+            <!--  -->
+            <div class="video">
+                <iframe src="https://learningapps.org/watch?app=28942310" frameborder="0"></iframe>
+            </div>
             <!-- 7 -->
             <h2>7. Co to jest i jaki ma kolor?</h2>
             <div class="image">
@@ -153,6 +157,9 @@
                         <button onclick="checkAnswers('set2')">Check</button>
                     </div>
                 </div>
+            </div>
+            <div class="video">
+                <iframe style="max-width:100%" src="https://wordwall.net/uk/embed/f12fd36166e84cb4960019190ac14607?themeId=45&templateId=36&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
             </div>
 
             <script>
