--- a/lekcji/lesson2powtorzenie.html
+++ b/lekcji/lesson2powtorzenie.html
@@ -49,7 +49,8 @@
                                     <div class="option" data-index="2" style="text-decoration: underline;">&nbsp;nowa | </div>
                                     <div class="option" data-index="3">&nbsp;tani </div>
                                 </div>
-                                <p class="p italic blue">Nie pasuje 'nowa', bo to jest rodzaj zenski, <br> 'tablica' bo nie jest w piórniku</p>
+                                <p class="p20 italic blue" style="width: 120%;">Nie pasuje 'nowa', bo to jest rodzaj zenski, </p>
+                                <p class="p20 italic blue" >'tablica' bo nie jest w piórniku</p>
                             </div>
                             <div class="question" data-correct="2">
                                 <div class="options">
@@ -408,6 +409,10 @@
                     <li>Пример: "Używam kamery do nagrywania filmów." (Я использую видеокамеру для записи видео.)</li>
                 </ul>
 
+            </div>
+            <h2>"Panie Janie" </h2>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y5vmEF8nTLY?si=ybf7hDvimhKQbp2G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <!-- SCRIPT -->
