--- a/lekcji/lesson2D.html
+++ b/lekcji/lesson2D.html
@@ -41,8 +41,13 @@
             <p class="p20">piłkę kopie kop, kop.</p>
             <p class="p20">Deszcz ze śniegiem chlup, chlup.</p>
             <p class="p20">A grad w szyby łup, łup.</p>
-            <!-- 1 -->
-            <h2>Dialog 1</h2>
+
+            <!--  -->
+            <div class="video">
+                <iframe style="max-width:100%"
+                    src="https://wordwall.net/uk/embed/ce02532a03f44c8a83de59ebfce4989f?themeId=1&templateId=38&fontStackId=0"
+                    width="500" height="380" frameborder="0" allowfullscreen></iframe>
+            </div>
             <!-- 1 -->
             <div class="two">
                 <div>
@@ -50,6 +55,7 @@
                     <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127150&authkey=%21ACUl-WHNWgvcr7k"
                         alt="502C1">
                 </div>
+
                 <!-- 2 -->
                 <div style="margin-top: 25% ;">
                     <h2>2. Prosze uzupetnic.</h2>
@@ -108,6 +114,12 @@
                     </div>
                 </div>
             </div>
+            <!--  -->
+            <div class="video">
+                <iframe style="max-width:100%"
+                    src="https://wordwall.net/uk/embed/753e13f12b3f4118b358cafaec234972?themeId=43&templateId=3&fontStackId=0"
+                    width="500" height="380" frameborder="0" allowfullscreen></iframe>
+            </div>
             <!-- 3 -->
             <h2>3. Co nie pasuje?</h2>
             <div>
@@ -149,7 +161,7 @@
                                     <div class="option" data-index="1"> &nbsp;łatwy | </div>
                                     <div class="option" data-index="2">&nbsp;brzydki </div>
                                 </div>
-                            </div> 
+                            </div>
                             <div class="question" data-correct="1">
                                 <div class="options">
                                     <div class="option" data-index="0">f. mały | </div>
@@ -550,29 +562,40 @@
                                 <p class="blue kolo p24" style="width: 32px;height: 32px;">d</p>
                             </div>
                             <div class="colors" style="position: absolute;top: 45%;left: 17.5%;">
-                                <p><input type="text"
-                                        data-answer="b" class="kolo" style="width: 35px;height: 35px;"></p>
+                                <p><input type="text" data-answer="b" class="kolo" style="width: 35px;height: 35px;">
+                                </p>
                             </div>
                             <div class="colors" style="position: absolute;top: 55%;left: 17.5%;">
-                                <p><input type="text"
-                                        data-answer="a" class="kolo" style="width: 35px;height: 35px;"></p>
+                                <p><input type="text" data-answer="a" class="kolo" style="width: 35px;height: 35px;">
+                                </p>
                             </div>
                             <div class="colors" style="position: absolute;top: 66%;left: 17.5%;">
-                                <p><input type="text"
-                                        data-answer="e" class="kolo" style="width: 35px;height: 35px;"></p>
+                                <p><input type="text" data-answer="e" class="kolo" style="width: 35px;height: 35px;">
+                                </p>
                             </div>
                             <div class="colors" style="position: absolute;top: 77%;left: 17.5%;">
-                                <p><input type="text"
-                                        data-answer="f" class="kolo" style="width: 35px;height: 35px;"></p>
+                                <p><input type="text" data-answer="f" class="kolo" style="width: 35px;height: 35px;">
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="flex">
                     <button onclick="checkAnswers('set9')">Sprawdź</button>
-                    
+
                 </div>
+            </div>
+            <!--  -->
+
+            <div class="video">
+                <iframe style="max-width:100%"
+                    src="https://wordwall.net/uk/embed/ce02532a03f44c8a83de59ebfce4989f?themeId=1&templateId=38&fontStackId=0"
+                    width="500" height="380" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <h2>"Panie Janie" </h2>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y5vmEF8nTLY?si=ybf7hDvimhKQbp2G" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
 
