--- a/lekcji/lesson3C.html
+++ b/lekcji/lesson3C.html
@@ -24,13 +24,15 @@
             <!-- nowy słowa-->
             <a href="https://quizlet.com/pl/934732636/%D0%9B%D0%BA%D1%89%D0%BB-%D0%B7%D1%89-%D0%BB%D0%BA%D1%89%D0%BB%D0%B3-1-3%D0%A1-flash-cards/?i=4wzil5&x=1jqt"
                 target="_blank">NOWY SŁOWA >>></a>
-            <div class="video">
-                <iframe src="https://quizlet.com/934732636/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
-            </div>
+                <div class="image">
+                    <h2>Przypadki w języku polskim</h2>
+                    <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfUFFqtH22egcpM3XA?embed=1&width=946&height=952"
+                        alt="przypadki" style="width: 35%;">
+                </div>
             <!-- 1-2 -->
             <div class="two">
                 <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131047&authkey=%21AHdnME2nkkI9fcM&width=1258&height=1496"
-                    alt="503C1">
+                    alt="503C1" style="width: 70%;">
                 <div class="question-set" id="set1">
                     <div class="dialog italic ">
                         <div class="colors">
@@ -38,7 +40,7 @@
                                 alt="503C2">
                         </div>
                         <div class="colors">
-                            <p class="p">Ta dziewczyna to Maja, a tamten chłopak to Adam. Oni <span
+                            <p class="p24">Ta dziewczyna to Maja, a tamten chłopak to Adam. Oni <span
                                     class="italic blue">nazywają się</span> Zielińscy.<input type="text"
                                     data-answer="Są" class="line_1"> z Polski i <input type="text"
                                     data-answer="mieszkają" class="line_1"> w Krakowie. Dobrze <input type="text"
@@ -60,7 +62,7 @@
             <div class="image">
                 <audio src="./audio/062.mp3" controls>062</audio>
                 <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131049&authkey=%21AM4hteDqwvB0Ck4&width=2384&height=1982"
-                    alt="503C3" style="width: 80%;">
+                    alt="503C3" style="width: 70%;">
             </div>
             <hr>
 
@@ -142,52 +144,55 @@
             <!-- 6 -->
             <h2>6. Lubię? Lubisz? Lubi..? [503B5]</h2>
             <div class="question-set" id="set5">
-                <div class="dialog italic ">
-                    <div class="colors">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131051&authkey=%21ACIHa9IzcbHC6iw&width=1316&height=956"
-                            alt="misaki" style="width: 40%;">
+                <div class="dialog italic two">
+                    <div>
+                        <div class="colors">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131051&authkey=%21ACIHa9IzcbHC6iw&width=1316&height=956"
+                                alt="misaki" style="width: 40%;">
+                        </div>
+                        <div class="raspisanie">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131052&authkey=%21ABuujyyNMjJO08Y&width=1336&height=364"
+                                alt="artem" style="width: 50%;"><br>
+                            <p class="p22">2. Artem <input type="text" data-answer="nie umie grać w tenisa" class="line_3"> .
+                            </p>
+                        </div>
+                        <div class="raspisanie">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131053&authkey=%21AGxv94sVaXHxl7U&width=1336&height=364"
+                                alt="clara" style="width: 50%;"><br>
+                            <p class="p22">3. Clara <input type="text" data-answer="nie zna język angelski" class="line_3"> .
+                            </p>
+                        </div>
+                        <div class="raspisanie">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131054&authkey=%21AIQA4IeVWWYsXwg&width=1336&height=364"
+                                alt="sophie" style="width: 50%;"><br>
+                            <p class="p22">4. Sophie <input type="text" data-answer="umie grać na pianinie" class="line_3"> .
+                            </p>
+                        </div>
                     </div>
-                    <div class="raspisanie">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131052&authkey=%21ABuujyyNMjJO08Y&width=1336&height=364"
-                            alt="artem" style="width: 50%;"><br>
-                        <p class="p">2. Artem <input type="text" data-answer="nie umie grać w tenisa" class="line_3"> .
-                        </p>
+                    <div>
+                        <div class="raspisanie">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131055&authkey=%21AAyqk83v1lI_Ifo&width=1336&height=364"
+                                alt="james" style="width: 50%;"><br>
+                            <p class="p22">5. James <input type="text" data-answer="umie robić eksperementy" class="line_3"> .
+                            </p>
+                        </div>
+                        <div class="raspisanie">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131056&authkey=%21ABfoCc1BQHvurvE&width=1336&height=364"
+                                alt="elena i olga" style="width: 50%;"><br>
+                            <p class="p22">6. Elena i Olga <input type="text" data-answer="umieją tańczyć" class="line_3"> .
+                            </p>
+                        </div>
+                        <div class="raspisanie">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131057&authkey=%21AHX87oZQrgNjhQE&width=1336&height=364"
+                                alt="adam i lukas" style="width: 50%;"><br>
+                            <p class="p22">7. Adam i Lukas <input type="text" data-answer="nie umieją grać w golfa"
+                                    class="line_3"> .</p>
+                        </div>
+                        <div class="raspisanie">
+                            <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131058&authkey=%21APA4bkHJxtDrkmM&width=1216&height=1992"
+                                alt="adam i lukas" style="width: 40%;">
+                        </div>
                     </div>
-                    <div class="raspisanie">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131053&authkey=%21AGxv94sVaXHxl7U&width=1336&height=364"
-                            alt="clara" style="width: 50%;"><br>
-                        <p class="p">3. Clara <input type="text" data-answer="nie zna język angelski" class="line_3"> .
-                        </p>
-                    </div>
-                    <div class="raspisanie">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131054&authkey=%21AIQA4IeVWWYsXwg&width=1336&height=364"
-                            alt="sophie" style="width: 50%;"><br>
-                        <p class="p">4. Sophie <input type="text" data-answer="umie grać na pianinie" class="line_3"> .
-                        </p>
-                    </div>
-                    <div class="raspisanie">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131055&authkey=%21AAyqk83v1lI_Ifo&width=1336&height=364"
-                            alt="james" style="width: 50%;"><br>
-                        <p class="p">5. James <input type="text" data-answer="umie robić eksperementy" class="line_3"> .
-                        </p>
-                    </div>
-                    <div class="raspisanie">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131056&authkey=%21ABfoCc1BQHvurvE&width=1336&height=364"
-                            alt="elena i olga" style="width: 50%;"><br>
-                        <p class="p">6. Elena i Olga <input type="text" data-answer="umieją tańczyć" class="line_3"> .
-                        </p>
-                    </div>
-                    <div class="raspisanie">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131057&authkey=%21AHX87oZQrgNjhQE&width=1336&height=364"
-                            alt="adam i lukas" style="width: 50%;"><br>
-                        <p class="p">7. Adam i Lukas <input type="text" data-answer="nie umieją grać w golfa"
-                                class="line_3"> .</p>
-                    </div>
-                    <div class="raspisanie">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2131058&authkey=%21APA4bkHJxtDrkmM&width=1216&height=1992"
-                            alt="adam i lukas" style="width: 20%;">
-                    </div>
-
                 </div>
                 <button onclick="checkAnswers('set5')">Check</button>
             </div>
@@ -233,48 +238,48 @@
                 <div>
                     <h2>11. Proszę uzupiełnić. [503C11]</h2>
                     <div class="question-set" id="set7">
-                        <div class="dialog italic ">
+                        <div class="dialog">
                             <div class="colors">
-                                <p class="p italic ">1. Olivia, co <span class="blue">czytasz</span>(ty/czytać)?</p>
+                                <p class="p24">1. Olivia, co <span class="blue">czytasz</span>(ty/czytać)?</p>
                             </div>
                             <div class="colors">
-                                <p class="p">2. Daniel nie za dobrze <input type="text" data-answer="gra"
+                                <p class="p24">2. Daniel nie za dobrze <input type="text" data-answer="gra"
                                         class="line_1">(grać) na gitarze.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">3. .3 My nie <input type="text" data-answer="słuchamy"
+                                <p class="p24">3. My nie <input type="text" data-answer="słuchamy"
                                         class="line_1">(słuchać) polskiej muzyki.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">4. Czy dobrze <input type="text" data-answer="śpiewacie"
+                                <p class="p24">4. Czy dobrze <input type="text" data-answer="śpiewacie"
                                         class="line_1">(wy/śpiewać)?</p>
                             </div>
                             <div class="colors">
-                                <p class="p">5. Niestety, nie <input type="text" data-answer="czytam"
+                                <p class="p24">5. Niestety, nie <input type="text" data-answer="czytam"
                                         class="line_1">(ja/czytać) dobrze po polsku.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">6. W poniedziatek Adam i Lukas <input type="text" data-answer="grają"
+                                <p class="p24">6. W poniedziatek Adam i Lukas <input type="text" data-answer="grają"
                                         class="line_1">(grać) w piłkę.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">7. Jak ona się <input type="text" data-answer="nazywa"
+                                <p class="p24">7. Jak ona się <input type="text" data-answer="nazywa"
                                         class="line_1">(nazywać)?</p>
                             </div>
                             <div class="colors">
-                                <p class="p">8. <input type="text" data-answer="Mam" class="line_1">(ja/mieć) duży
+                                <p class="p24">8. <input type="text" data-answer="Mam" class="line_1">(ja/mieć) duży
                                     problem z gramatyką.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">9. Na lekcji polskiego <input type="text" data-answer="słuchamy"
+                                <p class="p24">9. Na lekcji polskiego <input type="text" data-answer="słuchamy"
                                         class="line_1">(my/słuchać) płyty CD.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">10. One świetnie <input type="text" data-answer="śpiewają"
+                                <p class="p24">10. One świetnie <input type="text" data-answer="śpiewają"
                                         class="line_1">(śpiewać).</p>
                             </div>
                             <div class="colors">
-                                <p class="p">11. Kiedy <input type="text" data-answer="macie" class="line_1">(wy/mieć)
+                                <p class="p24">11. Kiedy <input type="text" data-answer="macie" class="line_1">(wy/mieć)
                                     wolny czas?</p>
                             </div>
                         </div>
@@ -329,6 +334,11 @@
 
         </main>
     </div>
+    <!-- SCRIPTS -->
+    <script src="../script.js"></script>
+    <script src="../checkRadio.js"></script>
+    <script src="../scriptchexBox.js"></script>
+    <script src="../wyborOtweta.js"></script>
 </body>
 
 </html>
