--- a/lekcji/lesson4A.html
+++ b/lekcji/lesson4A.html
@@ -19,13 +19,15 @@
         <main class="main">
             <h1>Krok po kroku - junior 1 <br> 4</h1>
             <h2>A - Jaki jestes? </h2>
-            <h3> zgodność rzeczownika i przymiotnika (utrwalenie)<br> Jaki jestes? /
+            <h3> - zgodność rzeczownika i przymiotnika (utrwalenie)<br> Jaki jestes? /
                 opis siebie i innych / wyrażanie opinii</h3>
             <!-- nowy słowa-->
             <a href="https://quizlet.com/pl/934882412/krok-po-kroku-junior-1-4a-flash-cards/?i=4wzil5&x=1jqt"
                 target="_blank">NOWY SŁOWA >>></a>
-            <div class="video">
-                <iframe src="https://quizlet.com/934882412/match/embed?i=4wzil5&x=1jj1" height="500" width="100%" style="border:0"></iframe>
+            <div class="image">
+                <h2>Przypadki w języku polskim</h2>
+                <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfUFFqtH22egcpM3XA?embed=1&width=946&height=952"
+                    alt="przypadki" style="width: 35%;">
             </div>
             <!-- 1 -->
             <h2>1. Prosze posłuchać i powtórzyć, a następnie opisać ilustrację. [504A1]</h2>
@@ -36,30 +38,29 @@
                         alt="504A1">
                 </div>
             </div>
-
             <div class="question-set" id="set1">
                 <h2>2. Prosze dopisac antonim. [504A2]</h2>
-                <div class="dialog italic" style="width: 100%;">
+                <div class="dialog two" style="width: 90%;margin-left: 5%;">
                     <div class="colors" style="width: 100%;">
-                        <p class="p italic ">a. wysoki => <span class="blue">niski</span></p>
-                    </div>
-                    <div class="colors" style="width: 100%;">
-                        <p class="p">b. szczupły => <input type="text" data-answer="gruby" class="line_2"></p>
+                        <p class="p22">a. wysoki => <span class="blue italic">niski</span></p>
                     </div>
                     <div class="colors" style="width: 100%;">
-                        <p class="p">c. ładny => <input type="text" data-answer="brzydki" class="line_2"></p>
+                        <p class="p22">b. szczupły => <input type="text" data-answer="gruby" class="line_2"></p>
+                    </div>
+                    <div class="colors" style="width: 100%;">
+                        <p class="p22">c. ładny => <input type="text" data-answer="brzydki" class="line_2"></p>
                     </div>
                     <div class="colors">
-                        <p class="p">d. młody => <input type="text" data-answer="stary" class="line_2"></p>
+                        <p class="p22">d. młody => <input type="text" data-answer="stary" class="line_2"></p>
                     </div>
                     <div class="colors">
-                        <p class="p">e. zdrowy => <input type="text" data-answer="chory" class="line_2"></p>
+                        <p class="p22">e. zdrowy => <input type="text" data-answer="chory" class="line_2"></p>
                     </div>
                     <div class="colors">
-                        <p class="p">f. wesoły => <input type="text" data-answer="smutny" class="line_2"></p>
+                        <p class="p22">f. wesoły => <input type="text" data-answer="smutny" class="line_2"></p>
                     </div>
                     <div class="colors">
-                        <p class="p">g. trudny => <input type="text" data-answer="łatwe" class="line_2"></p>
+                        <p class="p22">g. trudny => <input type="text" data-answer="łatwe" class="line_2"></p>
                     </div>
                 </div>
                 <button onclick="checkAnswers('set1')">Check</button>
@@ -80,64 +81,64 @@
             </div>
             <!-- 6 -->
             <h2>6. Prawda (P) czy nieprawda (N)? Dlaczego? [504A6]</h2>
-            <div>
+            <div style="width: 90%;" id="task504A6" class="two">
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">1. Denis nie jest wysportowany.</p>
+                    <p class="italic p20" style="width: 140%;">1. Denis nie jest wysportowany.</p>
                     <div class="options">
                         <label><input type="radio" name="question1" value="1"> P</label>
                         <label><input type="radio" name="question1" value="2"> N</label>
                     </div>
                 </div>
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">2. Artem jest szczupły i wesoły.</p>
+                    <p class="italic p20" style="width: 140%;">2. Artem jest szczupły i wesoły.</p>
                     <div class="options">
                         <label><input type="radio" name="question2" value="1"> P</label>
                         <label><input type="radio" name="question2" value="2"> N</label>
                     </div>
                 </div>
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">3. Adam jest niesympatyczny.</p>
+                    <p class="italic p20" style="width: 140%;">3. Adam jest niesympatyczny.</p>
                     <div class="options">
                         <label><input type="radio" name="question3" value="1"> P</label>
                         <label><input type="radio" name="question3" value="2"> N</label>
                     </div>
                 </div>
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">4. Elena jest ładna i energiczna.</p>
+                    <p class="italic p20" style="width: 140%;">4. Elena jest ładna i energiczna.</p>
                     <div class="options">
                         <label><input type="radio" name="question4" value="1"> P</label>
                         <label><input type="radio" name="question4" value="2"> N</label>
                     </div>
                 </div>
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">5. Mathis jest przystojny.</p>
+                    <p class="italic p20" style="width: 140%;">5. Mathis jest przystojny.</p>
                     <div class="options">
                         <label><input type="radio" name="question5" value="1"> P</label>
                         <label><input type="radio" name="question5" value="2"> N</label>
                     </div>
                 </div>
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">6. Misaki jest wysoka i bardzo ładna.</p>
+                    <p class="italic p20" style="width: 140%;">6. Misaki jest wysoka i bardzo ładna.</p>
                     <div class="options">
                         <label><input type="radio" name="question6" value="1"> P</label>
                         <label><input type="radio" name="question6" value="2"> N</label>
                     </div>
                 </div>
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">7. Lukas jest smutny, bo jest chory.</p>
+                    <p class="italic p20" style="width: 140%;">7. Lukas jest smutny, bo jest chory.</p>
                     <div class="options">
                         <label><input type="radio" name="question7" value="1"> P</label>
                         <label><input type="radio" name="question7" value="2"> N</label>
                     </div>
                 </div>
                 <div class="task options" style="width: 100%;">
-                    <p class="italic" style="font-size:26px;width: 100%;">8. Gordon jest chory, ale sympatyczny..</p>
+                    <p class="italic p20" style="width: 140%;">8. Gordon jest chory, ale sympatyczny..</p>
                     <div class="options">
                         <label><input type="radio" name="question8" value="1"> P</label>
                         <label><input type="radio" name="question8" value="2"> N</label>
                     </div>
                 </div>
-                <button onclick="checkRadio()">Sprawdzać</button>
+                <button onclick="checkRadio('task504A6')">Chek</button>
             </div>
             <!-- 7-8 -->
             <div class="two">
@@ -202,50 +203,22 @@
                         alt="504A9_1">
                 </div>
             </div>
+            <!--  -->
+            <div class="video">
+                <iframe style="max-width:100%" src="https://wordwall.net/uk/embed/dccb1c8fb4d54cdc9387581ce56a3ae2?themeId=2&templateId=3&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <!--  -->
 
-            <!-- script -->
-            <script src="../script.js"></script>
-            <script>
-                function checkRadio() {
-                    const correctAnswers = {
-                        question1: '2',
-                        question2: '2',
-                        question3: '2',
-                        question4: '1',
-                        question5: '1',
-                        question6: '2',
-                        question7: '2',
-                        question8: '2',
-                    };
-
-                    let allCorrect = true;
-
-                    for (const question in correctAnswers) {
-                        const selectedAnswer = document.querySelector(`input[name="${question}"]:checked`);
-                        const taskElement = document.querySelector(`input[name="${question}"]`).closest('.task');
-
-                        if (selectedAnswer && selectedAnswer.value === correctAnswers[question]) {
-                            taskElement.classList.add('correct');
-                            taskElement.classList.remove('incorrect');
-                        } else {
-                            taskElement.classList.add('incorrect');
-                            taskElement.classList.remove('correct');
-                            allCorrect = false;
-                        }
-                    }
-
-                    if (allCorrect) {
-                        alert("Все ответы верны!");
-                    } else {
-                        alert("Есть ошибки в ответах.");
-                    }
-
-                }
-
-            </script>
+            
+            
 
         </main>
     </div>
+    <!-- SCRIPTS -->
+    <script src="../script.js"></script>
+    <script src="../checkRadio.js"></script>
+    <script src="../scriptchexBox.js"></script>
+    <script src="../wyborOtweta.js"></script>
 </body>
 
 </html>
