--- a/lekcji/lesson2D.html
+++ b/lekcji/lesson2D.html
@@ -21,7 +21,7 @@
     <div class="wrapper">
         <header>
             <ul class="ulhead">
-                <li class="li"><a href="../../index.html">Home</a></li>
+                <li class="li"><a href="https://ksushatarasenko.github.io/KPK_junior_A1/">Home</a></li>
             </ul>
         </header>
         <main class="main">
