--- a/lekcji/lesson2+.html
+++ b/lekcji/lesson2+.html
@@ -21,7 +21,7 @@
     <div class="wrapper">
         <header>
             <ul class="ulhead">
-                <li class="li"><a href="../../index.html">Home</a></li>
+                <li class="li"><a href="../index.html">Home</a></li>
             </ul>
         </header>
         <main class="main">
