--- a/lekcji/lesson1.html
+++ b/lekcji/lesson1.html
@@ -224,7 +224,7 @@
                     <p class="p"><span class="green">TORU: </span>Kto to <input type="text" data-answer="j"><input
                             type="text" data-answer="e">s<input type="text" data-answer="t">?</p>
                     <p class="p"><span class="green">MASAKI: </span>To jest nowa <input type="text" data-answer="u"
-                            c><input type="text" data-answer="c"><input type="text" data-answer="h">enn<input
+                            c><input type="text" data-answer="c"><input type="text" data-answer="z">enn<input
                             type="text" data-answer="i"><input type="text" data-answer="c"><input type="text"
                             data-answer="a">, Laura.</p>
                 </div>
