--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2D.html">2 - D - Stare, nowe, kolorowe? <span class="red">
                                 zgodnosé rzeczownika iem - cd.; opis przedmiotów 28 z przymiotnik; Co jest wtwoim
-                                plecaku?</span></a><input type="checkbox" class="checkbox"></li>
+                                plecaku?</span></a><input type="checkbox" class="checkbox" checked></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2powtorzenie.html">2 - Powtórzenie </a><input type="checkbox"
-                            class="checkbox"></li>
+                            class="checkbox" checked></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2+.html">2 - Plus - dia ambitnych <span
                                 class="red">utrwalenie wiadomosci; opisywanie zanych miejsc w Polsce</span></a><input
