--- a/lekcji/lesson3Powtorzenie.html
+++ b/lekcji/lesson3Powtorzenie.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <header>
             <ul class="ulhead">
-                <li class="li"><a href="../../index.html">Home</a></li>
+                <li class="li"><a href="../index.html">Home</a></li>
             </ul>
         </header>
         <main class="main">
